tests/diff_len_arrs.stderr
error: All of the arrays within the matrix must be the same length.
 --> $DIR/diff_len_arrs.rs:5:34
  |
5 |     let _x = matrix!([[1, 2, 3], [4, 5], [6], [7, 8, 9]]);
  |                                  ^^^^^^
