tests/diff_len_arrs.rs
// Test fails when the sub arrays are different lenghts
use matrix_multiplication::matrix;

fn main() {
    let _x = matrix!([[1, 2, 3], [4, 5], [6], [7, 8, 9]]);
}
